--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.thymeleaf.cache:false
+spring.thymeleaf.cache=false
 spring.devtools.remote.secret=somesecret
-spring.devtools.livereload.enabled  = true
-spring.resources.chain.cache = false
+spring.devtools.livereload.enabled=true
+spring.resources.chain.cache=false
 
