--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.devtools.remote.secret=somesecret
 spring.devtools.livereload.enabled  = true
 spring.resources.chain.cache = false
 
+spring.resources.chain.strategy.fixed.enabled=true
+spring.resources.chain.strategy.fixed.version=test_version
+
